samples/_failures_safe/1761665101_b146ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed2bad6e.c: In function ‘main’:
./samples/SAFE/__tmp_ed2bad6e.c:160:9: error: expected declaration or statement at end of input
  160 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_ed2bad6e.c:160:9: error: expected declaration or statement at end of input
